[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Puzzles/fuel.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Puzzles/juxbox.png" type="Texture" id=2]
[ext_resource path="res://Fonts/dialog_message.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/InventoryUI.gd" type="Script" id=4]

[node name="InventoryUI" type="PanelContainer"]
margin_left = 122.0
margin_top = -89.0
margin_right = 206.0
margin_bottom = -63.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 82.0
margin_bottom = 21.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0

[node name="FuelSprite" type="Sprite" parent="HBoxContainer/PanelContainer"]
position = Vector2( 8.01691, 7.01581 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 1 )

[node name="JuxBoxSprite" type="Sprite" parent="HBoxContainer/PanelContainer"]
position = Vector2( 8.01691, 7.01581 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 22.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 26.0
margin_top = 1.0
margin_right = 75.0
margin_bottom = 13.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "+1 JuxBox"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
